Files list reset after changing project.